--- a/.env_sample
+++ b/.env_sample
@@ -1,3 +1,3 @@
-STORAGE_ACCOUNT_NAME=sm1thmi
+STORAGE_ACCOUNT_NAME=strgdelicatetreefrog
 BLOB_CONTAINER_NAME=mycontainer
-BLOB_NAME=myfile.txt
+BLOB_NAME=textfile.txt
